[gd_scene load_steps=7 format=3 uid="uid://ch7qrikum5eyl"]

[ext_resource type="Script" path="res://src/entities/boss/beaver/beaver.gd" id="1_d2i2x"]
[ext_resource type="Script" path="res://src/entities/boss/beaver/beaverAI.gd" id="2_553ta"]
[ext_resource type="Texture2D" uid="uid://badkiyyh0u7eb" path="res://assets/sprites/Beaver_Berrier.png" id="3_em727"]
[ext_resource type="Texture2D" uid="uid://bdwkbjtjtu6tx" path="res://icon.svg" id="3_fr3dc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uybsu"]
radius = 34.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ij7q"]
size = Vector2(31, 30)

[node name="Beaver" type="Node2D"]
script = ExtResource("1_d2i2x")

[node name="Ai" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("2_553ta")

[node name="Player_near" type="CollisionShape2D" parent="Ai"]
position = Vector2(-1, 0)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_uybsu")

[node name="Player_near_sprite" type="Sprite2D" parent="Ai/Player_near"]
texture_filter = 1
position = Vector2(1.90735e-06, 1.90735e-06)
scale = Vector2(2.1875, 2.1875)
texture = ExtResource("3_em727")

[node name="Timer_Player_Near" type="Timer" parent="Ai"]
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="Sprite2D" type="Sprite2D" parent="Hitbox"]
position = Vector2(-1.5, -0.625009)
scale = Vector2(0.226562, 0.228516)
texture = ExtResource("3_fr3dc")

[node name="Enemy_Collision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1.5, -1)
shape = SubResource("RectangleShape2D_7ij7q")

[connection signal="area_entered" from="Ai" to="Ai" method="_on_area_entered"]
[connection signal="area_shape_entered" from="Ai" to="." method="_on_ai_area_shape_entered"]
[connection signal="area_shape_entered" from="Ai" to="Ai" method="_on_area_shape_entered"]
[connection signal="area_shape_exited" from="Ai" to="Ai" method="_on_area_shape_exited"]
[connection signal="body_entered" from="Ai" to="Ai" method="_on_body_entered"]
[connection signal="body_exited" from="Ai" to="Ai" method="_on_body_exited"]
[connection signal="body_shape_entered" from="Ai" to="Ai" method="_on_body_shape_entered"]
[connection signal="timeout" from="Ai/Timer_Player_Near" to="Ai" method="_on_timer_player_near_timeout"]
[connection signal="area_shape_entered" from="Hitbox" to="." method="_on_hitbox_area_shape_entered"]
